# mysql-connector

./: Cargo.toml  LICENSE  README.md  check.sh
.github/workflows/: rust.yml  spelling.yml
examples/: hello_world.rs
examples/migrations/: main.rs
examples/migrations/migrations/: mod.rs  v0_1_0.rs  v0_1_1.rs
macros/: Cargo.toml
macros/src/: lib.rs  parse.rs
src/: lib.rs  pool.rs
src/connection/: auth.rs  bitflags.rs  command.rs  data.rs  init.rs  io.rs  mod.rs  options.rs  parse_buf.rs  prepared_statement.rs  query.rs  result_set.rs  serialization.rs  timeout.rs
src/connection/packets/: auth_switch_request.rs  column_def.rs  err.rs  handshake.rs  handshake_response.rs  mod.rs  ok.rs  stmt.rs  stmt_close.rs  stmt_execute_request.rs  stmt_send_long_data.rs
src/connection/types/: auth_plugin.rs  column.rs  column_type.rs  ints.rs  mod.rs  null_bitmap.rs  protocol.rs
src/error/: mod.rs  parse.rs  protocol.rs
src/migrator/: migration.rs  migrator_inner.rs  mod.rs  model.rs
src/model/: from_query_result.rs  into_query.rs  mod.rs  plain.rs  test.rs
src/model/active_model/: active_reference.rs  active_value.rs  mod.rs  named_value.rs  update_model.rs
src/pool/: async_pool.rs  mod.rs  pool_item.rs  sync_pool.rs
src/types/: hex.rs  mod.rs
src/types/value/: bin.rs  conversion.rs  mod.rs  text.rs
src/utils/: buf_mut_ext.rs  crypt.rs  mod.rs  scramble.rs
