[package]
name = "mysql-connector-macros"
version = "0.0.2"
edition = "2021"
description = "Macros for the mysql-connector crate"
license = "MIT"
authors = ["Untbu", "Comet1903"]
repository = "https://github.com/riseupgroup/mysql-connector"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = "2.0.60"
